--- a/package.json
+++ b/package.json
@@ -1,6 +1,17 @@
 {
-  "private": true,
-  "dependencies": {
-    "express": "^4.15.3"
-  }
+    "private": true,
+    "dependencies": {
+        "express": "^4.15.3"
+    },
+    "name": "week7-day4-todomvc",
+    "version": "1.0.0",
+    "main": "app.js",
+    "devDependencies": {},
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node app.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "description": ""
 }
